# notes

./: .gitignore  2026-05-29-lage.md  CNAME  README.md  backupbuild.py  build copy 2.py  build copy 3.py  build copy.py  build.py  copymd.py  generate copy.py  generate.py  index.html  md-to-html-links.lua  pyproject.toml  refs.json  requirements.txt  rss.xml  typewriter.css
assets/: refs.json  typewriter copy.css  typewriter.css  typewriter_backup.css
content/: 2018-01-01-colophon.md  2022-07-15-Truth-vs-BS.md  2022-08-07-The-Art-of-Practicing.md  2022-08-11-Performance-as-a-Practice.md  2022-08-28-Willpower-vs-Rules.md  2022-12-19-Effort-vs-Results.md  2023-05-22-Negative-Utility.md  2023-07-12-stupidity.md  2023-07-21-Attention-Manipulated.md  2023-08-07-politics.md  2023-08-11-bullshit-jobs.md  2023-08-11-fake-news.md  2023-09-02-Gemba-Kaizen.md  2023-09-02-mono-no-aware.md  2023-09-05-Good-Over-Perfect.md  2023-10-13-constrains.md  2023-10-20-rigid.md  2023-10-31-Rules-of-the-Game.md  2024-01-07-practice.md  2024-03-03-slow.md  2024-05-07-burden.md  2024-05-07-sustain.md  2024-06-11-figure-out.md  2024-08-28-uses.md  2025-02-02-truth.md  2025-02-17-concise.md  2025-03-04-intuition.md  2025-03-15-lies.md  2025-03-27-mind.md  2025-06-20-italian.md  2025-07-24-borges.md  2025-07-25-tools.md  2025-07-28-intuition.md  2025-08-03-optimization.md  2025-08-04-one.md  2025-08-04-rituals.md  2025-08-08-eighty-percent.md  2025-08-08-thought.md  2025-08-09-eighty-percent.md  2025-08-14-sights.md  (+26 more)
docs/: CNAME  index.html  rss.xml  typewriter.css
ssg/: build copy.py  build.py
(+78 files in other folders)
