[project]
name = "notes"
version = "0.1.0"
description = "Custom SSG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
build = "ssg.build:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.12.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.setuptools.packages.find]
include = ["ssg*"]  # only include your package